--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# =========================
+# Other files
+# =========================
+.*
+!/.gitignore
+IPython (Py 2.7) Notebook
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
@@ -45,3 +52,4 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+.ipynb_checkpoints/plot_routes-checkpoint.ipynb
